# python-aaa-sample

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
scripts/: install_git_pc_hook
src/: hello.py
