[project]
name = "python-aaa-sample"
version = "1.0"
description = "A sample Python project with best quality practices"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "pre-commit>=3.5.0",
    "pylint>=3.2.7",
]

[tool.pytest]
    [tool.pytest.ini_options]
    addopts= "--doctest-modules -vv"
    testpaths = [
        "tests",
        "src"
    ]

[tool.coverage]
    [tool.coverage.paths]
    source = ["src"]

    [tool.coverage.run]
    relative_files = true

    [tool.coverage.report]
    exclude_also = [
        "if TYPE_CHECKING:"
    ]
    show_missing = true
    fail_under = 100
    skip_empty = true
    skip_covered = true

[tool.ruff]
line-length = 100

    [tool.ruff.lint]
    extend-select = ["I"]
