[global]
verbose=0

[metadata]
name=AAA
version=1.0
author=Louis-Amaury Chaib <louisamaury.chaib@gmail.com>

[options]
python_requires= >=3.6
setup_requires=pytest-runner
tests_require=
    pytest
    pytest-cov
    pytest-pylint
    pytest-flakes
scripts=
    scripts/install_git_pc_hook

[options.packages.find]
where=src
exclude=test


[bdist_wheel]
universal = true

[aliases]
test=pytest

[tool:pytest]
addopts = --doctest-modules --verbose --pylint --cov=src --flakes
# that's AAA so all pylint violations are errors, but should you want to filter
# add --pylint-error-types=EF (or whichever levels of violations) to options
python_files= src/*.py, test/*.py

[coverage:report]
fail_under=100
show_missing = true

[coverage:run]
source=src


